# McDota

./: .gitignore  CMakeLists.txt  README.md  debug  debug_user  dotaparticleblacklist.txt.example  dotaparticletracker.txt.example  gdb  gdb_debug_attach.txt  gdb_debug_inject.txt  load  load-stealth  load_carto  rebuildprotos.sh  uload  uload-stealth  uload_force  uloaddev  zombies
src/: Interfaces.cpp  Interfaces.h  McDota.cpp  Netvars.cpp  Netvars.h  Scanner.cpp  Scanner.h  Settings.cpp  Settings.h  interfaces.cpp  interfaces.h  scanner.cpp  scanner.h  settings.cpp  settings.h
src/GUI/: Callbacks.cpp  Callbacks.h  Gui.cpp  Gui.h  Main.xml  gui.cpp  gui.h  main.xml
src/Hacks/: Esp.cpp  Esp.h  NoFog.cpp  NoFog.h  Zoom.cpp  Zoom.h
src/Hooks/: CreateEvent.cpp  CreateMove.cpp  CreateNetChannel.cpp  CreateParticleCollection.cpp  DeleteParticleCollection.cpp  DispatchEvent.cpp  FireEventClientSide.cpp  FrameStageNotify.cpp  GetFoWAmount.cpp  GetFogEnd.cpp  GetZFar.cpp  HardHooks.h  Hard_BAsyncSendProto.cpp  Hard_DispatchPacket.cpp  Hooks.h  LevelInit.cpp  PaintTraverse.cpp  PostEventAbstract.cpp  PostReceivedNetMessage.cpp  PrepareUnitOrders.cpp  RunScript.cpp  SendMove.cpp  SendNetMessage.cpp  SendPacket.cpp  SetKeyCodeState.cpp  StartSoundEvent.cpp  hooks.h
src/SDK/: CBaseCombatCharacter.h  CBaseEntity.h  CBaseFileSystem.h  CCollisionProperty.h  CDOTAPlayerResource.h  CDOTARichPresence.h  CDOTAWearableItem.h  CDotaBaseNPC.h  CDotaCamera.h  CDotaFogOfWarSystem.h  CDotaPlayer.h  CEngineServiceMgr.h  CFontManager.h  CGCClient.h  CGameEntitySystem.h  CGameEventManager.h  CGameEventManger.h  CGameEventSystem.h  CGlobalVars.h  CNetworkGameClient.h  CNetworkMessages.h  CNetworkStringTableContainer.h  CNetworkSystem.h  CPanoramaGameScriptScope.h  CParticleCollection.h  CParticleSystemMgr.h  CRenderDeviceGL.h  CRenderGameSystem.h  CSoundOPSystem.h  CSource2Client.h  CSplitScreenService.h  CUtlMemory.h  CUtlString.h  CUtlVector.h  CVPhys2World.h  CVScriptGameSystem.h  CViewRender.h  CViewSetup.h  ConMsg.h  Convar.h  (+22 more)
src/SDK/Valve/tier0/: memalloc.h  memoverride.cpp  memoverride.h
src/SDK/Valve/tier1/: utldelegateimpl.h
src/SDK/panorama/: CPanel2D.h  IUIEvent.h  IUIPanel.h  PanoramaUIEngine.h  types.h
src/Utils/: Crc32.h  Draw.cpp  Draw.h  Integritycheck.cpp  Integritycheck.h  Keyvalue.cpp  Keyvalue.h  Logger.h  Math.cpp  Math.h  Memory.cpp  Memory.h  Patternfinder.cpp  Patternfinder.h  Protobuf.cpp  Protobuf.h  Util.cpp  Util.h  Util_sdk.cpp  Util_sdk.h  Vmt.h  integritycheck.cpp  integritycheck.h  math.cpp  patternfinder.cpp  util.cpp  util.h  util_sdk.cpp  util_sdk.h  vmt.h
src/Utils/subhook/: README.md  subhook.c  subhook.h  subhook_private.h  subhook_unix.c  subhook_x86.c
src/protos/: mcdota.pb.cpp  mcdota.pb.h  mcdota.proto
